# discord-chess-2

./: .gitignore  Cargo.toml  README.md  arion-compose.nix  arion-pkgs.nix  docker-compose.yml  flake.nix  fleet.toml
bot/: Cargo.toml
bot/src/: lib.rs
commands/: Cargo.toml
commands/src/: lib.rs  support.rs
commands/src/commands/: mod.rs  new_game.rs  register.rs  test.rs
commands/src/slash/: mod.rs  test.rs
database/: Cargo.toml
database/prisma/: schema.prisma
database/prisma/migrations/20220626180909_initial_db/: migration.sql
database/src/lib/: lib.rs  prisma.rs
events/: Cargo.toml
events/src/: errors.rs  lib.rs
src/: README.md  main.rs
state/: Cargo.toml
state/src/: lib.rs
utils/: Cargo.toml
utils/src/: emojis.rs  lib.rs
