[package]
name = "bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
error-stack = "0.1"
commands = { path = "../commands" }
tokio = "1"

[dependencies.poise]
version = "0.3"
features = ["time"]
