[package]
name = "commands"
version = "0.1.0"
edition = "2021"

[dependencies]
database = { path = "../database" }
tracing = "0.1"
error-stack = "0.1"

[dependencies.poise]
version = "0.3"
features = ["time"]

[dependencies.serenity]
version = "0.11"
default-features = false

features = [
	"time",
	"builder",
	"cache",
	"rustls_backend",
	"gateway",
	"model",
	"http",
	"utils",
]
