[package]
name = "commands"
version = "0.1.0"
edition = "2021"

[dependencies]
database = { path = "../database" }
state = { path = "../state" }

tracing.workspace = true
error-stack.workspace = true
shakmaty.workspace = true
poise.workspace = true
serenity.workspace = true

[dev-dependencies]
pretty_assertions = "1"
