[package]
name = "database"
version = "0.1.0"
edition = "2021"

[lib]
name = "database"
path = "src/lib/lib.rs"

[dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.5.2" }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.5.2" }
once_cell = "1"
error-stack = { git = "https://github.com/hashintel/hash", rev = "a5baa2c97b528f2551e807aa7faa88c124a9942c" }
tracing = "0.1"

[dependencies.serde]
version = "1"
features = ["derive"]
